# resources/views/categories/index.blade.php
@@ -35,14 +35,14 @@
                                 <tr>
                                     <th scope="col">{{ __('Image') }}</th>
                                     <th scope="col">{{ __('Name') }}</th>
-                                    <th scope="col">{{ __('Actions') }}</th>
+                                    <th scope="col" class="text-center">{{ __('Actions') }}</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 @foreach ($categories as $category)
                                     <tr>
-                                        <td><img style="height: 50px" src="{{ !empty($category->categoryImages) ? asset('storage/'.$category->image_folder). '/' . $category->categoryImages->first()->image : '' }}" alt="{{ !empty($image = $category->categoryImages->first()) ? $image->alt : '' }}"></td>                                        <td><a href="{{ route('categories.show', $category) }}">{{ $category->name }}</a></td>
-                                        <td class="text-right">
+                                        <td><img style="height: 50px" src="{{ $category->categoryImages->count() > 0 ? asset('storage/'.$category->image_folder). '/' . $category->categoryImages->first()->image : '' }}" alt="{{ !empty($image = $category->categoryImages->first()) ? $image->alt : '' }}"></td>                                        <td><a href="{{ route('categories.show', $category) }}">{{ $category->name }}</a></td>
+                                        <td class="text-center">
                                             <div class="dropdown">
                                                 <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                     <i class="fas fa-ellipsis-v"></i>
