# resources/views/products/index.blade.php
@@ -1,0 +1,91 @@
+@extends('layouts.app', ['title' => __('Category list')])
+
+@section('content')
+    @include('layouts.headers.cards')
+
+    <div class="container-fluid mt--7">
+        <div class="row">
+            <div class="col">
+                <div class="card shadow">
+                    <div class="card-header border-0">
+                        <div class="row align-items-center">
+                            <div class="col-8">
+                                <h3 class="mb-0">{{ __(($categories->count() > 1 ? 'All' : $categories->first()->name) ?? 'All') }} </h3>
+                            </div>
+                            <div class="col-4 text-right">
+                                <a href="{{ route('products.create') }}" class="btn btn-sm btn-primary">{{ __('Add product') }}</a>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col-12">
+                        @if (session('status'))
+                            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                                {{ session('status') }}
+                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                        @endif
+                    </div>
+                    <div class="table-responsive">
+                        <table class="table align-items-center table-flush">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th scope="col">{{ __('Image') }}</th>
+                                    <th scope="col">{{ __('Name') }}</th>
+                                    <th scope="col">{{ __('Category') }}</th>
+                                    <th scope="col">{{ __('Description') }}</th>
+                                    <th scope="col">{{ __('Price') }}</th>
+                                    <th scope="col">{{ __('Units') }}</th>
+                                    <th scope="col" class="text-center">{{ __('Actions') }}</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @if(!empty($products))
+                                    @foreach ($products as $product)
+                                        <tr>
+                                            <td><img style="height: 50px" src="{{ $product->productImages->count() > 0 ? asset('storage/'.$product->image_folder). '/' . $product->productImages->first()->image : '' }}" alt="{{ !empty($image = $product->productImages->first()) ? $image->alt : '' }}"></td>
+                                            <td><a href="{{ route('products.show', $product->id) }}">{{ $product->name }}</a></td>
+                                            <td>{{ $product->category->name }}</td>
+                                            <td>{{ \Illuminate\Support\Str::limit($product->description, 30, '...') }}</td>
+                                            <td>{{ $product->price }} $</td>
+                                            <td>{{ $product->unit->name }}</td>
+                                            <td class="text-center">
+                                                <div class="dropdown">
+                                                    <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                        <i class="fas fa-ellipsis-v"></i>
+                                                    </a>
+                                                    <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
+                                                        @hasanyrole('super-admin|admin|editor')
+                                                        <form action="{{ route('products.destroy', $products) }}" method="post">
+                                                                @csrf
+                                                                @method('delete')
+
+                                                                <a class="dropdown-item" href="{{ route('products.edit', $products) }}">{{ __('Edit') }}</a>
+                                                                <button type="button" class="dropdown-item" onclick="confirm('{{ __("Are you sure you want to delete this product?") }}') ? this.parentElement.submit() : ''">
+                                                                    {{ __('Delete') }}
+                                                                </button>
+                                                            </form>
+                                                        @endhasanyrole
+                                                    </div>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    @endforeach
+                                @endif
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="card-footer py-4">
+                        <nav class="d-flex justify-content-end" aria-label="...">
+                            {{ $products->links() }}
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+            
+        @include('layouts.footers.auth')
+    </div>
+@endsection
